kubernetes/platform/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: barou-platform
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: homepage

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
